# Robot_AI_HW1-OIIAIOIIIAI-Cat-

./: README.md
bringup/: package.xml  setup.py
bringup/launch/: display.launch.py  gazebo.launch.py
control/: package.xml  setup.py
control/control/: motion_manager.py
description/: package.xml  setup.py
description/config/: ros2_controllers.yaml
description/media/materials/scripts/: cat.material
description/meshes/: cat_ear.stl
description/rviz/: robot.rviz
description/urdf/: robot.urdf.xacro
