<?xml version="1.0"?>
<package format="3">
  <name>bringup</name>
  <version>0.0.1</version>
  <description>Gazebo launch files for the loaf cat robot.</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>control</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
